Updated project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "button-loader",
+  "name": "angular-angular-material-seed",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
